@@ -14,9 +14,9 @@ function get_file_name($file)
         case 'vendor_css':
             return "{$site_config['baseurl']}/css/1/vendor_e892b672.css";
         case 'sceditor_css':
-            return "{$site_config['baseurl']}/css/1/sceditor_45e56514.css";
+            return "{$site_config['baseurl']}/css/1/sceditor_e24f1c22.css";
         case 'main_css':
-            return "{$site_config['baseurl']}/css/1/main_0c4a1d68.css";
+            return "{$site_config['baseurl']}/css/1/main_45275823.css";
         case 'main_js':
             return "{$site_config['baseurl']}/js/1/main_f153e2cb.js";
         case 'vendor_js':
@@ -42,7 +42,7 @@ function get_file_name($file)
         case 'theme_js':
             return "{$site_config['baseurl']}/js/1/theme_ff3ca3dd.js";
         case 'sceditor_js':
-            return "{$site_config['baseurl']}/js/1/sceditor_826b5ad4.js";
+            return "{$site_config['baseurl']}/js/1/sceditor_2d41edb7.js";
         case 'cheaters_js':
             return "{$site_config['baseurl']}/js/1/cheaters_88e84984.js";
         case 'user_search_js':
