@@ -10,13 +10,13 @@ function get_file_name($file)
         case 'chat_css_uranium':
             return "{$site_config['baseurl']}/css/2/chat_uranium_4603c5b9.css";
         case 'css':
-            return "{$site_config['baseurl']}/css/2/css_7c97d596.css";
+            return "{$site_config['baseurl']}/css/2/css_6e4e1498.css";
         case 'vendor_css':
             return "{$site_config['baseurl']}/css/2/vendor_e892b672.css";
         case 'sceditor_css':
-            return "{$site_config['baseurl']}/css/2/sceditor_6eb75160.css";
+            return "{$site_config['baseurl']}/css/2/sceditor_05975556.css";
         case 'main_css':
-            return "{$site_config['baseurl']}/css/2/main_325b8b55.css";
+            return "{$site_config['baseurl']}/css/2/main_6ab04753.css";
         case 'main_js':
             return "{$site_config['baseurl']}/js/2/main_f153e2cb.js";
         case 'vendor_js':
@@ -42,7 +42,7 @@ function get_file_name($file)
         case '':
             return "{$site_config['baseurl']}/";
         case 'sceditor_js':
-            return "{$site_config['baseurl']}/js/2/sceditor_3942ad35.js";
+            return "{$site_config['baseurl']}/js/2/sceditor_001d36d5.js";
         case 'cheaters_js':
             return "{$site_config['baseurl']}/js/2/cheaters_88e84984.js";
         case 'user_search_js':
