@@ -1,4 +1,5 @@
 28 Oct, 2018
+update: resize signature and avatar in forums
 update: version to 0.5
 update: database files
 fix: installer updating removed table
